2026-01-09 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.6.0-alpha
	* Added the docs directory.
	* Updated build.gradle.
		* Added the javadoc extension.
		* The javadoc task will output the contents in the newly added docs
		directory.
	* Updated package-info.java from the pacio package.
		* The Javadoc now uses paragraphs.
		* Redescribed the Javadoc comment for the package, now calling it
		the main package of the library.
	* Updated PacIO.java.
		* The Javadoc now uses paragraphs.
		* Compacted the code.
	* Updated package-info.java from the file package.
		* The Javadoc now uses paragraphs.
		* Reworked on the Javadoc comment, now explaining what it's used
		for.
	* Updated PacObject.java.
		* Removed the name variable, as it is already stored in the path
		variable.
		* The method getName() now functions differently, now returning
		with path.getFileName.toString().
	* Updated PacFile.java.
		* The Javadoc now uses paragraphs.
	* Updated PacDirectory.java.
		* The Javadoc now uses paragraphs.
	* Updated Loadable.java.
		* The Javadoc now uses paragraphs.
	* Updated Savable.java.
		* The Javadoc now uses paragraphs.
	* Added the catalog package for PacIO.
		* It features a package-info.java that briefly describes the
		package.
	* Added the rom package for PacIO.
		* It features a package-info.java that briefly describes the
		package.
	* Added the util package for PacIO.
		* It features a package-info.java that briefly describes the
		package.

2026-01-01 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.5.1-alpha
	* Renewed the copyright year for each Java file to 2026.
	* Updated the package-info.java for
	io.github.thatgarlicdude.pacio.file.
		* Changed the comment describing the package to represent it
		better.

2025-12-29 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.5.0-alpha
	* Updated PacRomSet.java.
		* Renamed it to PacDirectory.java.